--- a/src/app/dashboard/masters/employee/employee-edit/employee-edit.component.html
+++ b/src/app/dashboard/masters/employee/employee-edit/employee-edit.component.html
@@ -14,7 +14,7 @@
                           <label class="form_label">Employee Name</label>
                           <input type="text" class="form-control inputbox_css" 
                                  placeholder="Enter Employee Name" 
-                                 formControlName="employee_name" maxlength="200">
+                                 formControlName="name" maxlength="200">
                         </div>
                       </div>
                       <div class="col-sm-4">
@@ -22,26 +22,22 @@
                           <label class="form_label">Employee Code</label>
                           <input type="text" class="form-control inputbox_css" 
                                  placeholder="Enter Employee Code"
-                                 formControlName="employee_code" maxlength="200">
+                                 formControlName="code" maxlength="200">
                         </div>
                       </div>
                       <div class="col-sm-4">
                         <div class="form-group">
                           <label class="form_label">Employee Role</label>
-                          <select class="form-control" formControlName="employee_role">
-                            <option>Select</option>
-                            
-                            <option>Auditor</option>
-                            <option>Planner</option>
-                            <option>View Only</option>
+                          <select class="form-control" formControlName="roleId">
+                            <option *ngFor="let item of rolesObj" [value]="item.id">{{item.name}}</option>
                           </select>
                         </div>
                       </div>
                     </div>
                   </div>
                   <div class="card-footer">
-                    <button (click)="save()" class="btn btn-primary">Save</button>
-                    <button (click)="close()" class="btn btn-default">Close</button>
+                    <button type="button" (click)="save()" class="btn btn-primary">Save</button>
+                    <button type="button" (click)="close()" class="btn btn-default">Close</button>
                   </div>
                 </form>
               </div>
