action plan changes

--- a/src/app/dashboard/action-plan/action-plan.component.html
+++ b/src/app/dashboard/action-plan/action-plan.component.html
@@ -12,7 +12,7 @@
                                     <h6 class="mr-1 mb-0">Filters:-</h6>
                                     <input type="text" class="form-control mr-1 filter_css" placeholder="Vendor Name ">
                                     <input type="text" class="form-control mr-1 filter_css" placeholder="Date ">
-                                    <input type="text" class="form-control mr-1 filter_css" placeholder="Status ">
+                                    <!-- <input type="text" class="form-control mr-1 filter_css" placeholder="Score "> -->
                                     <!-- <button class="btn btn-success d-flex  align-items-center">
                                         <i class="fas fa-upload mr-1 upload_ico"></i>
                                         <span class="now_rap">Upload Plan</span>
@@ -270,12 +270,12 @@
                                 <table id="" class="table table-bordered table-hover">
                                     <thead>
                                         <tr class="text-center">
-                                            <th colspan="7">Observation(2)</th>
+                                            <th colspan="8">Observation(2)</th>
                                         </tr>
-                                        <tr class=" text-center sticky_header">
-                                            
+                                        <tr class=" text-center sticky_header fon_9">
+                                            <th>Observation</th>
                                             <th>ITEM NO.</th>
-                                            <th>ITEM NO. </th>
+                                            <th>SUB ITEM NO. </th>
                                             <th>DESIRED IMPROVEMENT POINTS</th>
                                             <th>DETAIL OF IMPROVEMENT PLAN</th>
                                             <th>IN-CHARGE</th>
@@ -284,24 +284,26 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr class="tbody_data">
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
+                                        <tr class="tbody_data ">
+                                            <td>1</td>
+                                            <td><textarea class="form-control"></textarea></td>
+                                            <td><textarea class="form-control"></textarea></td>
+                                            <td><textarea class="form-control"></textarea></td>
+                                            <td><textarea class="form-control"></textarea></td>
+                                            <td><textarea class="form-control"></textarea></td>
+                                            <td><textarea class="form-control"></textarea></td>
+                                            <td><textarea class="form-control"></textarea></td>
                                             
                                         </tr>
                                         <tr class="tbody_data">
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
+                                            <td>2</td>
+                                            <td><textarea class="form-control"></textarea></td>
+                                            <td><textarea class="form-control"></textarea></td>
+                                            <td><textarea class="form-control"></textarea></td>
+                                            <td><textarea class="form-control"></textarea></td>
+                                            <td><textarea class="form-control"></textarea></td>
+                                            <td><textarea class="form-control"></textarea></td>
+                                            <td><textarea class="form-control"></textarea></td>
                                             
                                         </tr>
                                     </tbody>
