--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -112,7 +112,7 @@
                 <i class="right fas fa-angle-left"></i>
               </p>
             </a>
-            <ul class="nav nav-treeview">
+            <ul class="nav nav-treeview" *ngIf="isVendor">
               <li class="nav-item">
                 <a routerLink="/dashboard/action-plan" class="nav-link">
                   <img src="../../assets/icons/lightbulb.png" class="side_img">
