--- a/src/styles.css
+++ b/src/styles.css
@@ -222,7 +222,9 @@
   border-color: yellow !important;
   color: #000 !important;
 }
-
+.fon_9{
+  font-size: 9px !important;
+}
 
 
 .card-footer {
