--- a/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
+++ b/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
@@ -18,12 +18,8 @@
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Vendor Code & Vendor Name <span class="start_css">*</span></label>
-                                        <select class="form-control" formControlName="vendor_code">
-                                            <option>Select Vendor Code</option>
-                                            <option>Vendor1</option>
-                                            <option> Vendor2</option>
-                                            <option>Vendor3</option>
-                                            <option>Vendor4</option>
+                                        <select class="form-control" formControlName="vendorId">
+                                            <option *ngFor="let item of vendorObj" [value]="item.id"> {{item.code}}  {{item.name }}</option>
                                         </select>
                                     </div>
                                 </div>
@@ -42,12 +38,8 @@
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Location <span class="start_css">*</span></label>
-                                        <select class="form-control" formControlName="location">
-                                            <option>Select Vendor Code</option>
-                                            <option>Location1</option>
-                                            <option>Location2</option>
-                                            <option>Location3</option>
-                                            <option>Location4</option>
+                                        <select class="form-control" formControlName="locationId">
+                                            <option  *ngFor="let item of locationObj" [value]="item.id">{{item.name }}</option>
                                         </select>
                                     </div>
                                 </div>
@@ -56,39 +48,39 @@
                                         <label class="form_label">Any Other location <span
                                                 class="start_css">*</span></label>
                                         <input type="text" class="form-control"
-                                        formControlName="other_location" placeholder="Type Any Other location">
+                                        formControlName="otherLocation" placeholder="Type Any Other location">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Any Other Code <span
                                                 class="start_css">*</span></label>
-                                        <input type="text" class="form-control" placeholder="Type Any Other Code" formControlName="other_code">
+                                        <input type="text" class="form-control" placeholder="Type Any Other Code" formControlName="otherCode">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Type Code</label>
-                                        <input type="text" class="form-control" placeholder="Type Code" formControlName="code">
+                                        <input type="text" class="form-control" placeholder="Type Code" formControlName="typeCode">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Type Name</label>
-                                        <input type="text" class="form-control" placeholder="Type Name" formControlName="name">
+                                        <input type="text" class="form-control" placeholder="Type Name" formControlName="typeName">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Type location</label>
-                                        <input type="text" class="form-control" placeholder="Type location" formControlName="new_location">
+                                        <input type="text" class="form-control" placeholder="Type location" formControlName="typeLocation">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Planned Start Date <span
                                                 class="start_css">*</span></label>
-                                        <input type="date" class="form-control inputbox_css" formControlName="start_date">
+                                        <input type="date" class="form-control inputbox_css" formControlName="plannedStartDate">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
@@ -96,7 +88,7 @@
                                         <label class="form_label">Planned End Date <span
                                                 class="start_css">*</span></label>
                                         <input type="date" class="form-control inputbox_css"
-                                        formControlName="end_date">
+                                        formControlName="plannedEndDate">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
@@ -106,7 +98,7 @@
                                         </label>
                                         <input type="text" class="form-control" 
                                             placeholder="Enter Auditee MSIL email"
-                                            formControlName="email">
+                                            formControlName="additionalMSILEmail">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
@@ -116,7 +108,7 @@
                                         </label>
                                         <input type="text" class="form-control" 
                                             placeholder="xyz@gmail.com" 
-                                            formControlName="auditee_email">
+                                            formControlName="auditeeEmail">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
@@ -126,7 +118,7 @@
                                         </label>
                                         <div class="input-group">
                                             <div class="custom-file">
-                                                <input type="file" class="custom-file-input" id="exampleInputFile" formControlName="attachment">
+                                                <input type="file" class="custom-file-input" (change)="onFileSelected($event)" id="exampleInputFile" formControlName="attachment">
                                                 <label class="custom-file-label" for="exampleInputFile">Choose
                                                     file</label>
                                             </div>
