--- a/src/app/default-layout/default-layout.component.html
+++ b/src/app/default-layout/default-layout.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
     <app-header></app-header>
-    <app-sidebar></app-sidebar>
+    <app-sidebar  class="sidebar-dark-primary"></app-sidebar>
     <div class="content-wrapper">
         <section class="content">
             <router-outlet></router-outlet>
