--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -210,6 +210,30 @@
                   </p>
                 </a>
               </li>
+              <li class="nav-item">
+                <a routerLink="/report/clause-wise-score" class="nav-link">
+                  <img src="../../assets/icons/lightbulb.png" class="side_img">
+                  <p>
+                    Clause Wise Score Trend
+                  </p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a routerLink="/report/vendor-wise-score" class="nav-link">
+                  <img src="../../assets/icons/lightbulb.png" class="side_img">
+                  <p>
+                    Vendor wise Score Trend
+                  </p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a routerLink="/report/trade-repeat" class="nav-link">
+                  <img src="../../assets/icons/lightbulb.png" class="side_img">
+                  <p>
+                    Trend of repeat observations
+                  </p>
+                </a>
+              </li>
             </ul>
           </li>
         </ul>
