--- a/src/app/dashboard/audit-plan/view-plan/view-plan-assign/view-plan-assign.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-assign/view-plan-assign.component.html
@@ -12,11 +12,29 @@
             <form [formGroup]="assignAuditorForm">
               <div class="table-responsive max_hei_table">
                 <table class="table table-bordered" formArrayName="assignAuditor">
-                  <thead>
+                  <thead class="sticky_header">
+                    <tr>
+                      <th>S.No</th>
+                      <th>Assign Auditor</th>
+                      <th>Action</th>
+                      </tr>
+                   
+                  </thead>
+                  <tbody>
                     <tr *ngFor="let obje of assignAuditorArray.controls;let i = index;">
                       <td>{{i+1}}</td>
                       <td class="p-1" [formGroupName]="i">
-                        <input type="text" class="form-control form_width" formControlName="auditor" />
+                        <select class="form-control">
+                          <option value="Select">Select</option>
+                          <option value="Auditor1 ">Auditor1 </option>
+                          <option value="Auditor2">Auditor2</option>
+                          <option value="Auditor3 ">Auditor3 </option>
+                          <option value="Auditor4">Auditor4</option>
+  
+                          <option value="Auditor5 ">Auditor5 </option>
+                          <option value="Auditor6">Auditor6</option>
+  
+                        </select>
                       </td>
                       <td class="btn-width p-1">
                         <button class="btn btn-success mr-2 py-1" (click)="addAuditor('')">
@@ -27,7 +45,7 @@
                         </button>
                       </td>
                     </tr>
-                  </thead>
+                    </tbody>
                 </table>
                 <!-- <table id="example2" class="table table-bordered table-hover">
                           <thead>
