--- a/src/app/dashboard/masters/categories/categories-edit/categories-edit.component.html
+++ b/src/app/dashboard/masters/categories/categories-edit/categories-edit.component.html
@@ -26,6 +26,10 @@
                         </div>
                       </div> -->
                     </div>
+                    <div class="d-flex">
+                    <input type="checkbox">
+<p class="ml-1 mb-0">Critical Observation</p>
+</div>
                   </div>
                   <div class="card-footer">
                     <button type="button" (click)="save()" class="btn btn-primary">Save</button>
