--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -102,6 +102,14 @@
                   </p>
                 </a>
               </li>
+              <li class="nav-item" *ngIf="isAuditor"> 
+                <a routerLink="/dashboard/action-pending-plan" class="nav-link">
+                  <img src="../../assets/icons/planning.png" class="side_img">
+                  <p>
+                    Pending Action Plan
+                  </p>
+                </a>
+              </li>
             </ul>
           </li>
           <li class="nav-item">
