--- a/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
@@ -12,7 +12,7 @@
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Vendor Code<span class="start_css">*</span></label>
-                                        <select class="form-control" formControlName="vendor_code">
+                                        <select class="form-control" formControlName="vendorId">
                                             <option *ngFor="let item of vendorObj" [value]="item.id"> {{item.code}}</option>
                                         </select>
                                     </div>
@@ -20,7 +20,7 @@
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Vendor Name<span class="start_css">*</span></label>
-                                        <select class="form-control" formControlName="vendor_code">
+                                        <select class="form-control" formControlName="vendorId">
                                             <option *ngFor="let item of vendorObj" [value]="item.id"> {{item.name }}</option>
                                         </select>
                                     </div>
